--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Página inicial</title>
 </head>
 <body>
-    <p>Aqui será feito o site da empresa ficticia Omni Soluções</p>
+    <p><button>Home</button></p>
+    <p><button>Telefone</button></p>
+    <p><button>Fale conosco</button></p>
+    <p><button>Localização</button></p>
+    <p><button>Whatsapp</button></p>
 </body>
 </html>
