Barra de navegação

--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
     <title>Página inicial</title>
 </head>
 <body>
-    <p><button>Home</button></p>
-    <p><button>Telefone</button></p>
-    <p><button>Fale conosco</button></p>
-    <p><button>Localização</button></p>
-    <p><button>Whatsapp</button></p>
+    <div class="conteiner">
+        <header>
+            <nav>
+                <div class="nav-conteiner">
+                    <img id="logo" src="img/logo.png" alt="Omni">
+                    <ul>
+                        <li><a href="#"></a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+    </div>
 </body>
 </html>
