Barra de navegação

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
                 <div class="nav-conteiner">
                     <img id="logo" src="img/logo.png" alt="Omni">
                     <ul>
-                        <li><a href="#"></a></li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Localização</a></li>
+                        <li><a href="#">Sobre</a></li>
+                        <li><a href="#">Fale conosco</a></li>
                     </ul>
                 </div>
             </nav>
