Incluí barra de pesquisa e logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <nav>
                 <div class="nav-conteiner">
-                    <img id="logo" src="img/logo.png" alt="Omni">
+                    <img id="logo" src="img/logo.png" alt="Omni" width="200">
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Localização</a></li>
@@ -20,6 +20,22 @@
                     </ul>
                 </div>
             </nav>
+            <div id="main-banner">
+                <div id="search-form">
+                    <h1>Pare de chutar o computador, contrate Omni Soluções</h1>
+                    <p>Contrate nossos serviços e pare de ter dor de cabeça</p>
+                    <form>
+                        <input type="text" name="pesquisa" id="Digite aqui sua pesquisa">
+                        <select name="servicos">
+                            <option value="">Todos os serviços</option>
+                        </select>
+                        <select name="categoria">
+                            <option value="">Categoria</option>
+                        </select>
+                        <input type="submit" value="Pesquisar">
+                    </form>
+                </div>
+            </div>
         </header>
     </div>
 </body>
