Barra de pesquisa

--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
                 <div class="nav-button"><button class="nv-btn" onclick="location.href='#'" type="button">Fale conosco</button></div>
         </div>
         <div class="nav-login">
-            <div class="login"><button class="nv-log" onclick="location.href='#'" type="button"><i
-                        class="material-icons">person</i></button>
+            <div class="login"><button class="nv-log" onclick="location.href='#'" type="button"><i class="material-icons">person</i></button>
             </div>
         </div>
     </body>
-
 </html>
